force-app/main/default/objects/Sucursal__c/fields/DirectordeVentasJaecoo__c.field-meta.xml
<CustomField>
    <fullName>DirectordeVentasJaecoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director de Ventas Jaecoo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SucursalesryJaecooDir</relationshipName>
    <type>Lookup</type>
</CustomField>