force-app/main/default/objects/Sucursal__c/fields/DirectordeVentasOmoda__c.field-meta.xml
<CustomField>
    <fullName>DirectordeVentasOmoda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director de Ventas Omoda</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SucursalesryOmodaDir</relationshipName>
    <type>Lookup</type>
</CustomField>