force-app/main/default/objects/Sucursal__c/fields/GerentedeSucursalJaecoo__c.field-meta.xml
<CustomField>
    <fullName>GerentedeSucursalJaecoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente de Sucursal Jaecoo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SucursalesryJaecooGer</relationshipName>
    <type>Lookup</type>
</CustomField>