force-app/main/default/objects/Sucursal__c/fields/GerentedeSucursalOmoda__c.field-meta.xml
<CustomField>
    <fullName>GerentedeSucursalOmoda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gerente de Sucursal Omoda</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SucursalesryOmodaGer</relationshipName>
    <type>Lookup</type>
</CustomField>