force-app/main/default/objects/Sucursal__c/fields/JefesdeSucursalJaecoo__c.field-meta.xml
<CustomField>
    <fullName>JefesdeSucursalJaecoo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefes de Sucursal Jaecoo</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SucursalesryJaecooJef</relationshipName>
    <type>Lookup</type>
</CustomField>