force-app/main/default/objects/Sucursal__c/fields/JefesdeSucursalOmoda__c.field-meta.xml
<CustomField>
    <fullName>JefesdeSucursalOmoda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Jefes de Sucursal Omoda</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SucursalesryOmodaJef</relationshipName>
    <type>Lookup</type>
</CustomField>